--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://vinitkesh.github.io/Console",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy" : "npm run build",
-"deploy" : "gh-pages -d build",
+"deploy" : "gh-pages -d build"
+
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
